Create the project

--- a/TALLER.BUSINESS/TALLER.BUSINESS.csproj
+++ b/TALLER.BUSINESS/TALLER.BUSINESS.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\TALLER.ENTITY\TALLER.ENTITY.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contract\" />
+    <Folder Include="Engines\" />
+  </ItemGroup>
+
 </Project>
