--- a/TALLER.COMMON/TALLER.COMMON.csproj
+++ b/TALLER.COMMON/TALLER.COMMON.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enum\" />
+    <Folder Include="Extension\" />
+  </ItemGroup>
+
 </Project>
