--- a/TALLER.DATA/TALLER.DATA.csproj
+++ b/TALLER.DATA/TALLER.DATA.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TALLER.COMMON\TALLER.COMMON.csproj" />
     <ProjectReference Include="..\TALLER.ENTITY\TALLER.ENTITY.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repository\" />
   </ItemGroup>
 
 </Project>
