--- a/TALLER.ENTITY/TALLER.ENTITY.csproj
+++ b/TALLER.ENTITY/TALLER.ENTITY.csproj
@@ -13,11 +13,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Dto\" />
-    <Folder Include="Models\" />
     <Folder Include="Scripts\Insert\" />
     <Folder Include="Scripts\Tables\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.6" />
   </ItemGroup>
   <ItemGroup>
@@ -27,10 +27,6 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup Condition="$(VisualStudioVersion) == '15.0'">
-    <Reference Include="Microsoft.Data.Tools.Schema.Sql, Version=13.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>$(SSDTPath)\Microsoft.Data.Tools.Schema.Sql.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Data.Tools.Schema.Sql.UnitTesting, Version=15.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>$(SSDTUnitTestPath)\Microsoft.Data.Tools.Schema.Sql.UnitTesting.dll</HintPath>
       <Private>True</Private>
