Create method AUTOMOVIL succes

--- a/Talleres/appsettings.json
+++ b/Talleres/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "sqlconnection": {
+    "connectionString": "data source=LAPTOP-GSSOPA20;initial catalog=mecanicodb;Integrated Security = True;"
+  }
 }
