--- a/TALLER.BUSINESS/TALLER.BUSINESS.csproj
+++ b/TALLER.BUSINESS/TALLER.BUSINESS.csproj
@@ -5,17 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TALLER.DATA\TALLER.DATA.csproj" />
     <ProjectReference Include="..\TALLER.ENTITY\TALLER.ENTITY.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contract\" />
-    <Folder Include="Engines\" />
   </ItemGroup>
 
 </Project>
