Create all method Mecanico, Recibo, Solicitud, Cliente Sucess

--- a/TALLER.COMMON/TALLER.COMMON.csproj
+++ b/TALLER.COMMON/TALLER.COMMON.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Extension\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TALLER.ENTITY\TALLER.ENTITY.csproj" />
+  </ItemGroup>
+
 </Project>
