Create method ListSolicitud and Listrecibo

--- a/Talleres/appsettings.json
+++ b/Talleres/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "sqlconnection": {
-    "connectionString": "data source=localhost;initial catalog=mecanicodb;Integrated Security = True;"
+   // "connectionString": "data source=localhost;initial catalog=mecanicodb;Integrated Security = True;"
 
-    //"connectionString": "data source=LAPTOP-GSSOPA20;initial catalog=mecanicodb;Integrated Security = True;"
+    "connectionString": "data source=LAPTOP-GSSOPA20;initial catalog=mecanicodb;Integrated Security = True;"
   }
 }
